@@ -1,6 +1,8 @@
 2008-10-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tests/entry.test: Removed dependency on precision in results
+	* tests/scrollbar.test: 
+	* tests/spinbox.test:
 	* tests/winWm.test: Fixed incorrect error strings
 	* tests/wm.test: 
 
